<resources>
    <string name="app_name">E-KFC-V2</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_time">Time</string>
    <string name="title_temp">Temp</string>
    <string name="title_camera">Camera</string>
    <string name="title_e_kfc">E-KFC</string>
    <string name="temperature">%1$s°C</string>
    <string name="thermostat">thermostat %1$d°C</string>
    <string name="grain_percent">83%</string>
    <string name="eau_percent">60%</string>
    <string name="grain_poids">3,2 kg</string>
    <string name="grain_duree">10,2 jours</string>
    <string name="eau_litre">8,3 L</string>
    <string name="eau_duree">4,4 jours</string>

    <string-array name="hours_morning">
        <item>5:00</item>
        <item>5:30</item>
        <item>6:00</item>
        <item>6:30</item>
        <item>7:00</item>
        <item>7:30</item>
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
    </string-array>
    <string-array name="hours_afternoon">
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>