<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.neon.e_kfc_v2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="fr.neon.e_kfc_v2.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_time"
        android:name="fr.neon.e_kfc_v2.ui.time.TimeFragment"
        android:label="@string/title_time"
        tools:layout="@layout/fragment_time" />
    <fragment
        android:id="@+id/navigation_temp"
        android:name="fr.neon.e_kfc_v2.ui.temp.TempFragment"
        android:label="@string/title_temp"
        tools:layout="@layout/fragment_temp" />
    <fragment
        android:id="@+id/navigation_camera"
        android:name="fr.neon.e_kfc_v2.ui.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera"/>
</navigation>